tests/invalid/Return_Invalid_2.whiley
function f() -> void:
    return true
